# OnLine-Disk

./: README.md
Chunk/: CMakeLists.txt  chunk.cpp  chunk.h  codec.h  jsonHandle.h  main.cpp
Client/: Hello.pro  client.cpp  client.h  clientchunk.h  codec.h  hello.cpp  hello.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  md5.cpp  md5.h  resource.qrc  updown.cpp  updown.h  updown.ui.autosave  uplordwin.cpp  uplordwin.h  uplordwin.ui
Master/: CMakeLists.txt  codec.h  main.cpp  master.cpp  master.h
